# rust-tfrecord

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: common.rs  dataset.rs  save_mnist_to_tfrecord.rs  tensorboard.rs  tensorboard_async.rs  tfrecord_info.rs  tfrecord_info_async.rs
examples/event_reader/: README.md  generate_tensorboard.py  main.rs
prebuild_src/: tensorflow_with_serde.rs  tensorflow_without_serde.rs
src/: conversions.rs  dataset.rs  error.rs  io.rs  lib.rs  markers.rs  ops.rs  protos.rs  reader.rs  record.rs  types.rs  utils.rs  writer.rs
src/conversions/: basic_conv.rs  image_conv.rs  mod.rs  ndarray_conv.rs  tch_conv.rs
src/event_writer/: async.rs  mod.rs  sync.rs
src/indexer/: async.rs  mod.rs  sync.rs
src/io/: async.rs  sync.rs
src/protobuf/: mod.rs
src/protobuf_ext/: example_ext.rs  feature_ext.rs  histogram_ext.rs  image_ext.rs  mod.rs  summary_ext.rs  tensor_ext.rs
src/protos/: ext.rs  mod.rs  tensorflow.rs
src/reader/: async.rs  sync.rs
src/record_reader/: async.rs  mod.rs  sync.rs
src/record_writer/: async.rs  mod.rs  sync.rs
src/summary/: conversions.rs  event.rs  histogram.rs  mod.rs  writer.rs
src/summary/writer/: async.rs  mod.rs  sync.rs
src/writer/: async.rs  mod.rs  sink.rs  sync.rs
tests/: common.rs  dataset.rs  example.rs  example_async.rs  image_links.txt  indexer.rs  indexer_async.rs  summary.rs  summary_async.rs
tfrecord/: Cargo.toml  build.rs
tfrecord-codegen/: Cargo.toml  README.md
tfrecord-codegen/src/: lib.rs
tfrecord/examples/: tensorboard.rs  tensorboard_async.rs
tfrecord/examples/event_reader/: README.md
tfrecord/prebuild_src/: tensorflow_with_serde.rs  tensorflow_without_serde.rs
tfrecord/src/: error.rs  event.rs  lib.rs
tfrecord/src/io/: mod.rs  sync.rs
tfrecord/src/protobuf_ext/: example_ext.rs  histogram_ext.rs  image_ext.rs  mod.rs  summary_ext.rs
tfrecord/src/record_reader/: async.rs  mod.rs
tfrecord/src/record_writer/: async.rs
tfrecord/tests/: example.rs  example_async.rs  indexer.rs  summary_async.rs  tfrecord_link.txt
