[package]
name = "tfrecord"
description = "Serialize and deserialize TFRecord data format from TensorFlow"
version = "0.8.0"
authors = ["Jerry Lin <jerry73204@gmail.com>"]
edition = "2018"
categories = ["parsing"]
documentation = "https://docs.rs/tfrecord/"
repository = "https://github.com/jerry73204/rust-tfrecord.git"
homepage = "https://github.com/jerry73204/rust-tfrecord"
build = "build.rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
thiserror = "1.0.26"
prost = "0.8.0"
crc = "2.0.0"
serde = { version = "1.0.127", features = ["derive"], optional = true }
futures = { version = "0.3.16", optional = true }
async-std = { version = "1.9.0", features = ["attributes", "unstable"], optional = true }
num_cpus = { version = "1.13.0", optional = true }
tokio = { version = "1.9.0", features = ["sync"], optional = true }
static_assertions = { version = "1.1.0", optional = true }
noisy_float = "0.2.0"
image = { version = "0.23.14", optional = true }
tch = { version = "0.5.0", optional = true }
ndarray = { version = "0.15.3", optional = true }
hostname = { version = "0.3.1", optional = true }
integer-encoding = "3.0.2"

[dev-dependencies]
serde = { version = "1.0.127", features = ["derive"] }
lazy_static = "1.4.0"
ureq = "2.1.1"
serde_json = "1.0.66"
rand = { version = "0.8.4", features = ["getrandom"] }
rand_distr = "0.4.1"
approx = "0.5.0"
flate2 = "1.0.20"
packed_struct = "0.6.0"
packed_struct_codegen = "0.6.0"
itertools = "0.10.1"
anyhow = "1.0.42"
clap = "3.0.0-beta.2"
csv = "1.1.6"
indexmap = "1.7.0"

[build-dependencies]
glob = "0.3.0"
prost-build = "0.8.0"
anyhow = "1.0.42"
lazy_static = "1.4.0"
ureq = "2.1.1"
tar = "0.4.35"
flate2 = "1.0.20"
hex = "0.4.3"

[features]
full = ["async_", "dataset", "summary", "with-tch", "with-image", "with-ndarray", "with-serde"]
async_ = ["futures", "async-std"]
generate_protobuf_src = []
dataset = ["async_", "num_cpus", "tokio", "static_assertions"]
summary = ["hostname"]
doc-only = ["tch/doc-only"]
with-tch = ["tch", "with-image"]
with-image = ["image"]
with-ndarray = ["ndarray"]
with-serde = ["serde"]

[package.metadata.docs.rs]
features = ["full", "doc-only"]
no-default-features = true
