[package]
name = "tfrecord-codegen"
version = "0.1.0"
edition = "2021"
authors = ["Jerry Lin <jerry73204@gmail.com>"]
description = "Code generation helper for tfrecord crate"
categories = ["parsing"]
documentation = "https://docs.rs/tfrecord/"
repository = "https://github.com/jerry73204/rust-tfrecord.git"
homepage = "https://github.com/jerry73204/rust-tfrecord"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
prost-build = "0.12.0"
anyhow = "1.0.75"
ureq = "2.7.1"
tar = "0.4.40"
flate2 = "1.0.27"
hex = "0.4.3"
once_cell = "1.18.0"
itertools = "0.11.0"
