[package]
name = "tfrecord"
description = "Serialize and deserialize TFRecord data format from TensorFlow"
version = "0.14.0"
authors = ["Jerry Lin <jerry73204@gmail.com>"]
edition = "2021"
categories = ["parsing"]
documentation = "https://docs.rs/tfrecord/"
repository = "https://github.com/jerry73204/rust-tfrecord.git"
homepage = "https://github.com/jerry73204/rust-tfrecord"
build = "build.rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0.188", features = ["derive"], optional = true }
futures = { version = "0.3.28", optional = true }
async-std = { version = "1.12.0", optional = true }
image = { version = "0.24.7", optional = true }
tch = { version = "0.13.0", optional = true }
ndarray = { version = "0.15.6", optional = true }
pin-project = { version = "1.1.3", optional = true }
thiserror = "1.0.48"
prost = "0.12.0"
crc = "3.0.1"
noisy_float = "0.2.0"
integer-encoding = "4.0.0"
num-traits = "0.2.16"
bytemuck = "1.14.0"
num = "0.4.1"
itertools = "0.11.0"
hostname = "0.3.1"
once_cell = "1.18.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
serde = { version = "1.0.188", features = ["derive"] }
ureq = "2.7.1"
serde_json = "1.0.105"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_distr = "0.4.3"
approx = "0.5.1"
flate2 = "1.0.27"
packed_struct = "0.10.1"
packed_struct_codegen = "0.10.1"
itertools = "0.11.0"
anyhow = "1.0.75"
csv = "1.2.2"
indexmap = "2.0.0"
structopt = "0.3.26"

[build-dependencies]
glob = "0.3.1"
prost-build = "0.12.0"
anyhow = "1.0.75"
ureq = "2.7.1"
tar = "0.4.40"
flate2 = "1.0.27"
hex = "0.4.3"
once_cell = "1.18.0"
tfrecord-codegen = { version = "0.1.0", path = "../tfrecord-codegen", optional = true }

[features]
generate_protobuf_src = ["tfrecord-codegen"]
full = ["async", "with-tch", "with-image", "with-ndarray", "with-serde"]
async = ["futures", "async-std", "pin-project"]
doc-only = ["full", "tch/doc-only"]
with-tch = ["tch", "with-image"]
with-image = ["image"]
with-ndarray = ["ndarray"]
with-serde = ["serde"]

[package.metadata.docs.rs]
features = ["full", "doc-only"]
no-default-features = true

[[example]]
name = "tensorboard"
required-features = ["image"]

[[example]]
name = "tensorboard_async"
required-features = ["async"]

[[example]]
name = "tfrecord_info_async"
required-features = ["async"]
